...
    modifier: Modifier = Modifier,
    subtitle: String? = null,
    centerTitle: Boolean = false,
    navIconType: NavIconType = NavIconType.BACK,
    onNavClick: (() -> Unit)? = null,
    navContentDescription: String? = null,
    navTestTag: String = "back_button",
    customNavigationIcon: (@Composable () -> Unit)? = null,
    // Search capability
    searchQuery: String? = null,
    onSearchQueryChange: ((String) -> Unit)? = null,
    isSearchExpanded: Boolean = false,
    onSearchExpandedChange: ((Boolean) -> Unit)? = null,
...
                    if (onNavClick != null) {
                        IconButton(
                            onClick = {
                                haptic.performHapticFeedback(HapticFeedbackType.TextHandleMove)
                                onNavClick()
                            },
                            modifier = Modifier.testTag("open_drawer_button")
                        ) {
                            Icon(
                                painter = painterResource(id = R.drawable.ic_app_menu),
                                contentDescription = navContentDescription ?: "Open Drawer",
                                tint = primaryColor
                            )
...
            if (searchQuery.isNotEmpty()) {
                IconButton(
                    onClick = {
                        haptic.performHapticFeedback(HapticFeedbackType.TextHandleMove)
                        onSearchQueryChange("")
                    },
                    modifier = Modifier.testTag("clear_search_button")
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.ic_action_cancel),
                        contentDescription = "Clear Search",
                        tint = palette.textSecondary
                    )
...
                IconButton(
                    onClick = {
                        haptic.performHapticFeedback(HapticFeedbackType.TextHandleMove)
                        onSearchExpandedChange(false)
                        onSearchQueryChange("")
                    },
                    modifier = Modifier.testTag("close_search_button")
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.ic_action_cancel),
                        contentDescription = "Close Search",
                        tint = palette.textSecondary
                    )
...
